# share-obet

./: .gitignore  docker-compose.yml
apps/api/: .env  Cargo.toml
apps/api/migrations/: 20260612132932_create_users.sql
apps/api/src/: app_state.rs  config.rs  main.rs
apps/api/src/application/: authenticate_telegram_user.rs  create_commitment.rs  get_commitment.rs  get_commitments.rs  mod.rs
apps/api/src/domain/: commitment.rs  mod.rs  user.rs  user_repository.rs
apps/api/src/infrastructure/: mod.rs
apps/api/src/infrastructure/repository/: mod.rs
apps/api/src/infrastructure/repository/in_memory/: commitment_repository.rs  mod.rs  user_repository.rs
apps/api/src/infrastructure/repository/postgres/: user_repository.rs
apps/api/src/infrastructure/telegram/: mod.rs  telegram_auth_validator.rs
apps/api/src/presentation/http/: auth.rs  mod.rs
apps/api/src/presentation/http/auth/: authenticate_telegram.rs  current_user_extractor.rs  mod.rs
apps/api/src/presentation/http/commitment/: create_commitment.rs  get_commitment.rs  get_commitments.rs  mod.rs
apps/share-obet-frontend/: components.json  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/share-obet-frontend/src/: App.tsx  main.tsx
apps/share-obet-frontend/src/App/: App.tsx
apps/share-obet-frontend/src/App/providers/: index.ts
apps/share-obet-frontend/src/base/__shape/: apiConfig.ts  httpClient.ts  index.ts
apps/share-obet-frontend/src/base/_setup/: apiConfig.ts  index.ts  (+3 more)
apps/share-obet-frontend/src/pages/: CommitmentListPage.tsx  CommitmentPage.tsx  index.ts
(+36 files in other folders)
